# next-gen-browser-engine

./: .gitignore  Cargo.toml  README.md  SOURCE_OF_TRUTH.md  SPEC-NEXT.md  TOPOLOGY.md  build.rs
.github/workflows/: ci.yml
ci/: airworthiness-gate.mjs  gen_locked_files.mjs  registry.json  run.mjs  structural_airworthiness_gate.mjs
crates/be-a11y/: Cargo.toml
crates/be-a11y/src/: lib.rs
crates/be-api/: Cargo.toml
crates/be-api/src/: lib.rs
crates/be-api/tests/: api_tests.rs
crates/be-axiom/: Cargo.toml
crates/be-axiom/src/: cid.rs  lib.rs  wire.rs
crates/be-braid/: Cargo.toml
crates/be-braid/src/: adapter.rs  bridge.rs  lib.rs  vocab.rs
crates/be-capability/: Cargo.toml
crates/be-capability/src/: lib.rs
crates/be-dom/: Cargo.toml
crates/be-dom/src/: lib.rs
crates/be-lanes/: Cargo.toml
crates/be-lanes/src/: lib.rs
crates/be-layout/: Cargo.toml
crates/be-layout/src/: lib.rs
crates/be-net/: Cargo.toml
crates/be-net/src/: errors.rs  fetch.rs  lib.rs
crates/be-net/tests/: fetch_tests.rs
crates/be-parser/: Cargo.toml
crates/be-parser/src/: lib.rs
crates/be-pulse/: Cargo.toml
crates/be-pulse/src/: lib.rs
crates/be-search/: Cargo.toml
crates/be-search/src/: audit.rs  cache.rs  candidate.rs  error.rs  fallback.rs  filter.rs  index.rs  journal.rs  lib.rs  partition.rs  query.rs  scope.rs
crates/be-search/tests/: security.rs
crates/be-search/tests/common/: mod.rs
crates/be-semantic/: Cargo.toml
crates/be-semantic/src/: lib.rs
crates/be-taint/: Cargo.toml
crates/be-taint/src/: lib.rs
crates/be-transpiler/: Cargo.toml
crates/be-transpiler/src/: errors.rs  escalation.rs  lib.rs  strategies.rs  transpiler.rs
crates/be-transpiler/tests/: transpile_tests.rs
diagrams/: ci_gates.mmd  defense_in_depth.mmd  machine_human_meeting.mmd  observability.mmd  topography.mmd
docs/: ADR.md  AIP_INTEGRATION.md  ANTIVIRUS_BROWSER.md  AXIOMS.md  BRAID_BRIDGE.md  BRAID_STEER.md  BROWSER_ENGINE_INGESTION.md  BROWSER_ENGINE_UNDERSTANDINGS.json  COMPATIBILITY_CONTRACT.md  DEFENSE_IN_DEPTH.md  DO178_PLAN.md  HANDOFF.md  HUMAN_LENS_DEFERRAL.md  JS_WASM_POSITION.md  LOCKED_FILES.md  MACHINE_HUMAN_MEETING.md  MCP_RESEARCH.md  MOBILE_HANDOFF.md  OBSERVABILITY.md  PERFORMANCE.md  SPEC.md  TOPOGRAPHY.md
native/mac-eye/: Package.swift
native/mac-eye/Sources/mac-eye/: main.swift
proto/: browser_state.proto
python/: engine.py  okf.py
reference/webkit/: PORT_LOG.json
reference/webkit/Source/WebKit/UIProcess/API/Cocoa/: WKWebView.h  WKWebViewConfiguration.h
research-log/: 2026-07-01-ai-research-okf-extraction.md  2026-07-01-be-search-spec-hardened.md  2026-07-01-phase2-spec.md  2026-07-01-search-engine-research.md  2026-07-01-source-of-truth.md  2026-07-01-topological-map.md  README.md
schemas/: aip_delegation.json  aip_policy.json  aip_privacy.json  aip_state.json  web_action.json  web_anchor.json  web_capability.json  web_observation.json  web_tape.json
scripts/: build_repo_graph.py  repo_to_lgwks_db.py
src/: browser_axioms.rs  browser_types.rs  lib.rs  main.rs
src/action/: mod.rs
src/audit/: lens.rs  mod.rs
src/boundary/: mod.rs  url_policy.rs
src/braid_bridge/: adapter.rs  mod.rs  term.rs
src/capability/: mod.rs
src/compat/: mod.rs
src/compute/: lane_manager.rs  mod.rs
src/observation/: anchor.rs  mod.rs  pixel_anchor.rs
src/platform/: chrome_adapter.rs  mod.rs  webkit_adapter.rs
src/policy/: broker.rs  mod.rs
src/state_machine/: mod.rs  transition_table.rs
src/tape/: fact_store.rs  mod.rs
tests/: test_okf.py  test_repo_to_lgwks_db.py
tests/integration/: test_parse_and_query.rs
tools/: export_web_vocab.rs
