[package]
name = "next-gen-browser-engine"
version = "0.1.0"
edition = "2021"
authors = ["srinji-kaggss"]
description = "AI-first deterministic web-cognition substrate"
license = "MIT"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", optional = true }

# The canonical content-address + IR is OWNED by Braid (the one machine-first
# core both this browser and logic-os consume — neither depends on the other).
# We bind the real crate, not a re-declared shadow: `Cid` here IS Braid's
# domain-separated BLAKE3 CID. no_std so it lives in our no_std substrate (A18).
# Pinned to Braid main @ the no_std merge (#12); move to a semver tag on release.
braid-ir = { git = "https://github.com/srinji-kaggss/Braid", rev = "fdd8515" }
braid-capability = { git = "https://github.com/srinji-kaggss/Braid", rev = "fdd8515" }

# Protobuf wire encoding is available only in std builds. The no_std core
# retains hand-written canonical types in src/browser_types.rs.
prost = { version = "0.13", default-features = false, features = ["derive", "std"], optional = true }

[build-dependencies]
prost-build = { version = "0.13", optional = true }

[features]
default = ["std"]
std = ["prost", "prost-build", "serde_json"]
no_std = []

[lib]
name = "next_gen_browser_engine"
path = "src/lib.rs"
