[workspace]
members = [
    "crates/be-parser",
    "crates/be-dom",
    "crates/be-a11y",
    "crates/be-layout",
    "crates/be-semantic",
    "crates/be-pulse",
    "crates/be-api",
    "crates/be-taint",
    "crates/be-lanes",
    "crates/be-axiom",
    "crates/be-braid",
    "crates/be-capability",
    "crates/be-net",
    "crates/be-search",
    "crates/be-transpiler",
]
resolver = "2"

[workspace.dependencies]
# === FROM BRAID (path deps) ===
braid-ir = { path = "/Users/srinji/Braid/crates/braid-ir" }
braid-verify = { path = "/Users/srinji/Braid/crates/braid-verify" }
braid-capability = { path = "/Users/srinji/Braid/crates/braid-capability" }

# === SWC (transpiler parsing) ===
swc_ecma_parser = { version = "41", features = ["typescript"] }
swc_ecma_ast = "25"
swc_common = "23"

# === FROM CRATES.IO ===
reqwest = { version = "0.13", features = ["rustls", "cookies", "gzip", "brotli", "deflate", "http2"] }
url = "2"
html5ever = "0.39"
markup5ever_rcdom = "0.39"
tendril = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
tower = "0.5"
tokio = { version = "1", features = ["full"] }
blake3 = "1.8"

# === SEARCH (be-search) ===
tantivy = { version = "0.26", default-features = false }
dashmap = "6"

# === SYNCED FROM LOGIC-OS-KERNEL (same versions) ===
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package]
name = "browser-engine"
version = "0.1.0"
edition = "2021"
description = "Browser engine with native AI surface and PULSE semantic API"

[[bin]]
name = "browser-engine"
path = "src/main.rs"

[[test]]
name = "test_parse_and_query"
path = "tests/integration/test_parse_and_query.rs"

[dependencies]
be-api = { path = "crates/be-api" }
be-net = { path = "crates/be-net" }
reqwest = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
swc_ecma_parser = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_common = { workspace = true }

[dev-dependencies]
be-parser = { path = "crates/be-parser" }
be-a11y = { path = "crates/be-a11y" }
be-layout = { path = "crates/be-layout" }
be-semantic = { path = "crates/be-semantic" }
be-pulse = { path = "crates/be-pulse" }
