[package]
name = "be-pulse"
version = "0.1.0"
edition = "2021"
description = "PULSE frame encoder. Compact semantic frames for AI agents."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
be-semantic = { path = "../be-semantic" }
be-axiom = { path = "../be-axiom" }

[dev-dependencies]
be-parser = { path = "../be-parser" }
be-a11y = { path = "../be-a11y" }
be-layout = { path = "../be-layout" }
