[package]
name = "be-transpiler"
version = "0.1.0"
edition = "2021"
description = "JS source transpiler. Converts raw JS into semantic terms."

[dependencies]
serde = { workspace = true }
be-capability = { path = "../be-capability" }
swc_ecma_parser = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_common = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
